# Jetson_Project

220614_3 Topic Control Success/: OpenCR_mode_change.ino
220614_3 Topic Control Success/mode_select/: CMakeLists.txt  package.xml
220614_3 Topic Control Success/test_pkg/: CMakeLists.txt  package.xml
220617_Linux_iot_client/: CMakeLists.txt  package.xml
220617_Linux_iot_client/src/: iot_client_try2.cpp
220622_D435_streaming_and_topicReceive_OpenCV/: CMakeLists.txt  package.xml
220622_D435_streaming_and_topicReceive_OpenCV/src/: opencv_bridge.cpp
220704_Get__to__Topic/Get_Circle_Flag/: Get_Circle_Flag.ino
220724_Merge_Total_Code/Step1. Blocking to SPOT/Blocking/ksh_rasp/workspace/: CMakeLists.txt  Capture.cpp  Capture_Inout.cpp  Capture_with_socket.cpp
220906_Last_Merge/220906_Last_Camera/: Merge_Step4_Mode_Camera.cpp
220906_Last_Merge/220906_Last_Jetson_Mode_selector/: Mode_Selector.cpp
220906_Last_Merge/220906_Last_socket_ros_bridge/: Bridge_ros_socket_for_Jetson1.cpp
opencv/220701_covert_bgr2gray/: converting_bgr2gray.cpp
opencv/220702_find_circle/: find_circle.cpp  youtube_link.txt
opencv/220703_get_distance/: Get_center_distance.cpp  동작영상_youtube.txt
opencv/220705_Calculate_Theta/: Calculator_theta.cpp
opencv/220706_Calculate_Real_Distance/: Calculate_Real_distance.cpp  youtube 링크.txt
opencv/220710_find_vehicle/: find_vehicle.cpp  youtube_link.txt
opencv/220711_find_vehicle_filtered/: find_vehilce_filtered.cpp
opencv/220712_Camera_with_iot_client/: Dynamixel.cpp  Sensor_read_socket.cpp  StepNode.cpp  total_camera.cpp
(+39 files in other folders)
